# Trove

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial_user.py  0002_client_table.py  0003_indexer_table.py  0004_task_tables.py  0005_ai_cache.py  0006_watchlist.py  0007_feed_tables.py  0008_app_setting.py  0009_watchlist_tmdb.py  0010_indexer_event.py  0011_seen_release_state.py  0012_notification_provider.py  0013_upgrade_tracking.py  0014_external_cache.py  0015_saved_alert.py
backend/src/trove/: config.py  db.py  log_buffer.py  logging_setup.py  main.py
backend/src/trove/ai/: agent.py  client.py  ranker.py
backend/src/trove/api/: ai.py  alerts.py  app_settings.py  auth.py  backup.py  browse.py  calendar.py  clients.py  deps.py  discover.py  docs.py  downloads.py  feeds.py  health.py  indexers.py  library.py  logs.py  notifications.py  quality_profiles.py  search.py  system.py  tasks.py  torznab.py  watchlist.py
backend/src/trove/clients/: __init__.py  base.py  deluge.py  nzbget.py  sabnzbd.py  transmission.py
backend/src/trove/docs/: 01-getting-started.md  02-clients.md  03-indexers.md  04-feeds.md  05-tasks.md  06-ai-agent.md  07-torznab-export.md  08-faq.md  09-backup.md  10-notifications.md  11-quality-profiles.md  12-downloads.md  13-discover-calendar.md  14-browse.md  15-alerts.md  16-plex-library.md  17-self-update.md
backend/src/trove/indexers/: __init__.py  base.py  cardigann.py  newznab.py  rartracker.py  unit3d.py
backend/src/trove/models/: __init__.py  ai_cache.py  app_setting.py  client.py  external_cache.py  feed.py  indexer.py  notification.py  saved_alert.py  task.py  user.py  watchlist.py
backend/src/trove/parsing/: title.py
backend/src/trove/services/: tmdb.py  (+15 more)
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_clients.py  test_health.py
backend/tests/clients/: test_deluge.py  test_nzbget.py  test_sabnzbd.py  test_transmission.py
(+43 files in other folders)
